Apply Repository pattern

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Qinqii": "Data Source=localhost;Initial Catalog=Qinqii;Integrated Security=true;Encrypt=True;TrustServerCertificate=True;Pooling=false"
+    "Qinqii": "Data Source=localhost;Initial Catalog=Qinqii;Integrated Security=true;Encrypt=True;TrustServerCertificate=True;Pooling=false;MultipleActiveResultSets=True"
   },
   "Jwt": {
     "Key": "shuudeptraicomotkhongai",
