--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Qinqii": "Data Source=localhost;Initial Catalog=Qinqii;Integrated Security=true;Encrypt=True;TrustServerCertificate=True;Pooling=false;MultipleActiveResultSets=True",
+    "Qinqii": "Data Source=localhost;Initial Catalog=TestQinqii;Integrated Security=true;Encrypt=True;TrustServerCertificate=True;Pooling=false;MultipleActiveResultSets=True",
     "QinqiiAzure":  "Server=tcp:qinqii.database.windows.net,1433;Initial Catalog=Qinqii;Persist Security Info=False;User ID=shuu;Password=4zkl.cmvn2k20.sv;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
